32) kernel: net: tunnels: improve implement 64 bits statistics.<br>
33) kernel: net: tun: honor IFF_UP in tun_get_user().<br>
34) kernel: net: ppp: define "ppp" device type.<br>
35) kernel: net: pppoe: fix memory corruption in padt work structure.<br>
36) kernel: net: pppox: use standard module auto-loading feature.<br>
37) kernel: net: pptp: verify sockaddr_len in pptp_bind() and pptp_connect().<br>
38) kernel: net: ipv6: restrict hop_limit sysctl setting to range [1; 255].<br>
39) kernel: net: ipv6: only act upon NETDEV_*_TYPE_CHANGE if we have ipv6 addresses.<br>
40) kernel: net: sit: hide noisy 6to4/6rd spoofing warnings.<br>
41) kernel: net: af_unix: avoid use-after-free in ep_remove_wait_queue.<br>
42) kernel: net: af_packet: fix match_fanout_group().<br>
43) kernel: net: fix __netdev_update_features return on ndo_set_features failure.<br>
44) kernel: net: scm: fix PaX detected msg_controllen overflow in scm_detach_fds.<br>
45) kernel: net: snmp: Remove duplicate OUTMCAST stat increment.<br>
46) kernel: net: ip6mr: call del_timer_sync() in ip6mr_free_table().<br>
47) kernel: net: fix regression in short UDP reads caused by "net: Fix skb csum races when peeking".<br>
48) kernel: net: revert "net: add length argument to skb_copy_and_csum_datagram_iovec".<br>
49) kernel: net: udp: properly support MSG_PEEK with truncated buffers.<br>
<br>
<br>
<b>3.9.x</b><br>
1) dropbear: up to 2015.71 version.<br>
2) dropbear: small revert fix regression break work in inetd mode.<br>
3) dropbear: add force proto famaly set (IPv4/6).<br>
4) dropbear: fix signature check.<br>
5) dropbear: increase kex hash cache size.<br>
6) dropbear: allow 3des,rsa,ecdsa,ecdh for compat.<br>
7) coovachilli: up to version 1.3.1.3 (commit: dd05c1b3).<br>
8) ethtool: up to 4.2 version.<br>
9) irqbalance: update to 16.12.2015 git version.<br>
10) build_system: add qdma tool (need for hw_qos support in future).<br>
11) kernel: ralink_raeth: switch to qdma for MT7621.<br>
<br>
<br>
<br>