@@ -1605,6 +1605,7 @@
 9) irqbalance: update to 16.12.2015 git version.<br>
 10) build_system: add qdma tool (need for hw_qos support in future).<br>
 11) kernel: ralink_raeth: switch to qdma for MT7621.<br>
+12) kernel: net/core: revert net: fix__netdev_update_features return.. and add comment.<br>
 <br>
 <br>
 <br>
